--- a/app/package.json
+++ b/app/package.json
@@ -11,16 +11,21 @@
     "dev": "npm run serve"
   },
   "dependencies": {
+    "@maxflex/v-number": "^1.0.9",
+    "animated-number-vue": "^1.0.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "chartist": "^0.11.0",
+    "countup.js": "^2.0.7",
     "es6-promise": "^4.2.4",
     "vue": "^2.6.10",
     "vue-carousel": "^0.18.0",
     "vue-clickaway": "^2.1.0",
+    "vue-countup-v2": "^4.0.0",
     "vue-loading-overlay": "^3.4.2",
     "vue-notifyjs": "^0.3.0",
+    "vue-number-animation": "^1.0.5",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
